# topstep-client-py

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/topstep/: __init__.py  auth.py  client.py  exceptions.py  http.py
src/topstep/endpoints/: __init__.py  accounts.py  contracts.py  history.py  orders.py  positions.py  trades.py
src/topstep/models/: __init__.py  account.py  bar.py  contract.py  order.py  position.py  trade.py
src/topstep/realtime/: __init__.py  market_hub.py  user_hub.py
tests/: conftest.py  test_accounts.py  test_auth.py  test_client.py  test_http.py  test_orders.py
