[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "topstep-client-py"
version = "0.1.1"
description = "Lightweight async Python client for the TopstepX / ProjectX Gateway API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["topstep", "projectx", "trading", "futures", "api", "propfirm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "signalrcore>=0.9.5",
    "websocket-client>=0.54.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.22",
]

[project.urls]
Homepage = "https://github.com/icarus-research/topstep-client-py"
Repository = "https://github.com/icarus-research/topstep-client-py"
Issues = "https://github.com/icarus-research/topstep-client-py/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
